	=== Release 0.3.10 ===

2009-05-18  Murray Cumming  <murrayc@murrayc.com>

	* libepc/shell.c (epc_shell_create_service_browser): Fix a warning about 
	no return value. Bug #583000 (Vincent Untz).

	=== Release 0.3.9 ===

2008-11-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* libepc-ui/password-dialog.h:
	* libepc-ui/progress-window.h:
	Use single GTK+ includes.

2008-11-02  Murray Cumming  <murrayc@murrayc.com>

	* libepc/shell.c (epc_shell_create_service_browser): 
	Return if epc_shell_get_avahi_client() returns a GError, instead of 
	then setting the already-set GError later.

2008-10-23  Mathias Hasselmann  <mathias@taschenorakel.de>

	Get default address of system DBus from pkg-config.

	* tests/test-runner.sh: See above.

2008-10-19  Murray Cumming  <murrayc@murrayc.com>

	=== Release 0.3.8 ===

2008-10-19  Mathias Hasselmann  <mathias@taschenorakel.de>

	Provide a default value for DBUS_SYSTEM_BUS_ADDRESS.

	* tests/test-runner.sh: See above.

2008-10-19  Mathias Hasselmann  <mathias@taschenorakel.de>

	Use different service ports for dispatchers since new Avahi only
	report local collisions under that condition. Might be a bug in Avahi.

	* tests/test-dispatcher-local-collision.c (main()):
	  Use port 2008 for dispatcher2.

2008-10-19  Mathias Hasselmann  <mathias@taschenorakel.de>

	Don't expect Avahi to announce services on interfaces named "*:avahi".

	* tests/framework.c (epc_test_list_ifaces()):
	  Ignore interfaces with ":avahi" suffix.

2008-10-19  Mathias Hasselmann  <mathias@openismus.com>

	Remove redundant epc_gettext() function.

	* Makefile.am:
	* libepc/i18n.c:
	* libepc/i18n.h:
	  Remove libepc/i18n.[ch].

	* libepc/consumer.c:
	* libepc/publisher.c:
	* libepc/tls.c:
	* libepc-ui/password-dialog.c:
	* libepc-ui/progress-window.c:
	* libepc/shell.c (epc_shell_init()):
	  Include <glib/gi18n-lib.h> instead of "libepc/i18n.h".
	  Bind localedir in epc_shell_init() instead of epc_gettext().

2008-10-19  Murray Cumming  <murrayc@murrayc.com>
